# lock-trace

./: CHANGELOG.md  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
.claude/commands/: reflection.md
.github/workflows/: ci.yml  release.yml  test-workflow.yml
docs/: CLI_REFERENCE.md  QUICK_REFERENCE.md
docs/claude/: architecture.md  claude-notes.md  code-style.md  development-commands.md  package-management.md  project-overview.md  python-guidelines.md  testing.md
lock_trace/: __init__.py  __main__.py  call_tracer.py  cli.py  cscope_interface.py  lock_analyzer.py
tests/: __init__.py  test_call_tracer.py  test_cli.py  test_cscope_interface.py  test_lock_analyzer.py
