[project]
name = "lock-trace"
version = "0.1.0"
description = "Static analysis tool for kernel function call stacks and lock contexts using cscope"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pyinstaller>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pyinstaller>=5.0.0",
]
build = [
    "pyinstaller>=5.0.0",
]

[project.scripts]
lock-trace = "lock_trace.cli:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # Line too long (let black handle it)
    "B904",  # Exception chaining (not required here)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=lock_trace",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=5",
]

[tool.coverage.run]
source = ["lock_trace"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]
